# splitthetee

./: .gitignore  RULES.md  conversation-log-2026-04-13.md  hole-association.js  server.js
.github/workflows/: deploy-production.yml
api/: .env.example  Dockerfile.lambda  main.py  pyproject.toml
api/app/: main.py
api/app/api/: router.py
api/app/api/v1/: assets.py  course_map.py  games.py  holes.py  qr.py  render.py  search.py  settings.py
api/app/core/: aws_secrets.py  config.py  database.py
api/app/db/: mongo.py
api/app/schemas/: course.py  game.py  hole.py  map.py  scoring.py  settings.py
api/app/services/: font_hints.py  game.py
api/app/services/golf/: holes.py  osm.py  search.py
api/app/services/products/: generator.py
api/app/services/render/: course_map.py  cricut.py  glass_template.py  glyphs.py  layout.py  scoring.py  svg.py
api/scripts/: generate_glyphs.py
api/tests/: test_cricut.py  test_endpoints.py  test_game.py  test_glass_template.py  test_holes.py  test_layout.py  test_layout_bounds.py  test_osm.py  test_polish.py  test_render_debug.py  test_render_endpoint.py  test_schemas.py  test_scoring.py  test_search.py  test_svg_renderer.py
coordination/api/inbox/: 001-schemas-and-search.md  002-osm-and-holes.md  003-layout-svg-glass-settings.md  (+24 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: main.ts
public/: designer.html  glass-template.js  layout-engine.js  svg-renderer.js
scripts/: cache.json  curated-courses.json  generate_products.py
(+94 files in other folders)
