[project]
name = "one-nine"
version = "0.1.0"
description = "One Nine — Golf Drinking Game Glass System"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "motor>=3.7,<4",
    "pymongo>=4.6,<5",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "httpx>=0.28,<1",
    "python-multipart>=0.0.18",
    "qrcode[pil]>=8.0,<9",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<1",
    "httpx>=0.28,<1",
    "ruff>=0.9,<1",
]
